syntax = "proto3";

package com.yuanchenxi95.model.api;

option java_multiple_files = true;
option java_package = "com.yuanchenxi95.twig.protobuf.api";
option java_outer_classname = "GreetingProto";

message HelloRequest {
    string first_name = 1;
    string last_name = 2;
}
message HelloResponse {
    string greeting = 1;
}
